# jcoreutils

./: .gitignore  LICENSE  Makefile  README  README.markdown  bidirectional-filter-1.dot  bidirectional-filter-2.dot  chop.hs  default.nix  dev.nix  flake.nix  jcoreutils.cabal  map.hs  trans.hs  xtee.cabal  xtee.dot  xtee.hs  xtee.lhs
map/: map.hs
trans/: trans.hs
