Name:          jcoreutils
Version:       1.1.0
Cabal-Version: >= 1.2
License:       MIT
License-File:  LICENSE
Copyright:     2010, 2012, 2014, 2015 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Stability:     stable
Bug-Reports:   jekor@jekor.com
Homepage:      https://github.com/jekor/jcoreutils
Package-URL:   https://github.com/jekor/jcoreutils/zipball/master
Category:      Text
Synopsis:      additions and enhancements to GNU Core Utilities
Description:   xtee: build complex pipelines
               map: map a command over each line of stdin
               chop: take sections from each line of stdin
               trans: translate strings
Tested-With:   GHC == 7.4.2
Build-Type:    Simple

Executable xtee
  Main-Is:       xtee.hs
  Build-Depends: base >= 4
  GHC-Options:   -Wall -pgmL lhs2TeX -optL--pre

Executable map
  Main-Is:       map.hs
  Build-Depends: base >= 4,
                 bytestring,
                 process
  GHC-Options:   -Wall -fno-warn-type-defaults

Executable chop
  Main-Is:       chop.hs
  Build-Depends: base >= 4,
                 parsec >= 3,
                 text
  Extensions:    OverloadedStrings
  GHC-Options:   -Wall -fno-warn-type-defaults

Executable trans
  Main-Is:       trans.hs
  Build-Depends: base >= 4,
                 bytestring,
                 stringsearch,
                 unix
  GHC-Options:   -Wall -fno-warn-type-defaults
