Name:          xtee
Version:       1.0
Cabal-Version: >= 1.2
License:       GPL
License-File:  COPYING
Copyright:     2010 Chris Forno
Author:        Chris Forno (jekor)
Maintainer:    jekor@jekor.com
Stability:     stable
Bug-Reports:   jekor@jekor.com
Homepage:      http://jekor.com/xtee/
Package-URL:   http://jekor.com/xtee/xtee.tar.gz
Category:      Console
Synopsis:      build complex pipelines
Description:   xtee ("cross-tee"/"expanded tee") is a program for building
               complex pipelines. It resembles the tee command, except that
               instead of copying stdin to stdout, it copies a file to stdout.
Tested-With:   GHC == 6.12.1
Build-Type:    Custom

Executable xtee
  Main-Is:       xtee.lhs
  Build-Depends: base >= 4
  GHC-Options:   -Wall -pgmL lhs2TeX -optL--pre
